# machine-boom-project

./: .env  .gitattributes  .gitignore  Dockerfile  README.MD  requirements.txt
data/boomer_data_simulation/: preprocessing.py
html/: AXPY_8h.html  AXPY_8h_source.html  Abs_8h.html  Abs_8h_source.html  AccumulatorConstraints_8h.html  AccumulatorConstraints_8h_source.html  Accumulator_8h.html  Accumulator_8h.js  Accumulator_8h_source.html  ActionImplementationVisitor_8h.html  ActionImplementationVisitor_8h_source.html  ActionImplementation_8h.html  ActionImplementation_8h_source.html  ActionManager_8h.html  ActionManager_8h_source.html  Action_8h.html  Action_8h_source.html  ActiveZone_8h.html  ActiveZone_8h.js  ActiveZone_8h_source.html  Actuator1DOF_8h.html  Actuator1DOF_8h.js  Actuator1DOF_8h_source.html  ActuatorConnector_8h.html  ActuatorConnector_8h.js  ActuatorConnector_8h_source.html  ActuatorConstraints_8h.html  ActuatorConstraints_8h_source.html  ActuatorUnit_8h.html  ActuatorUnit_8h.js  ActuatorUnit_8h_source.html  Actuator_8h.html  Actuator_8h.js  Actuator_8h_source.html  Add_8h.html  Add_8h_source.html  AddedMassDb_8h.html  AddedMassDb_8h.js  AddedMassDb_8h_source.html  AddedMassInteractionHandler_8h.html  (+1763 more)
include/: H5pubconf.h  HashImplementationSwitcher.h  lapi.h  lauxlib.h  lcode.h  ldebug.h  ldo.h  lfunc.h  lgc.h  llex.h  llimits.h  lmem.h  lobject.h  lopcodes.h  lparser.h  lstate.h  lstring.h  ltable.h  ltm.h  lua.h  luaconf.h  lualib.h  lundump.h  lvm.h  lws_config.h  lzio.h  tolua++.h
include/FMI/: fmi_xml_context.h
include/JM/: jm_portability.h
include/agx/: AddedMassInteraction.h  AddedMassInteractionHandler.h  AffineMatrix4x4.h  AgxH5.h  Allocator.h  AnalysisBox.h  AngularJointBase.h  AngularLockJoint.h  AtomicValue.h  Attachment.h  AutoSleep.h  BallJoint.h  BitArray.h  BitSet_small.h  BitState.h  BodyContactJacobian.h  Bound.h  BoxedHybridPivotAlgorithm.h  BoxedKellerAlgorithm.h  BoxedMurtyAlgorithm.h  BufferEvent.Declaration.h  BufferEvent.Implementation.h  Callback.h  ChromeTracingGenerator.h  Clock.h  Component.h  ComponentManager.h  ComponentVisitor.h  ConfigSingleton.h  Constraint.h  ConstraintAngle.h  ConstraintImplementation.h  ContactForceFilter.h  ContactForceFilterParticipant.h  ContactForceReader.h  Container.h  CustomElementaryConstraints.h  CustomGravityField.h  CylindricalJoint.h  Date.h  (+248 more)
include/agxBrick/: BrickInterop.h  agxBrick.h  agxBrick_export.h
include/agxCFG/: ConfigIO.h  ConfigScript.h  ConfigValue.h  ExpressionSolver.h  Item.h  ItemMap.h  Preprocessor.h  utils.h
include/agxCL/: OpenCL.h  agxCL.h
include/agxCable/: Attachment.h  Cable.h  CableDamage.h  CableDamageState.h  CableDamageStateFilter.h  CableDamageStateTypes.h  CableDamageTypes.h  CableIterator.h  CablePlasticity.h  CableProperties.h  CablePropertiesReaderWriter.h  CableSegment.h  ContactDamage.h  DeformationData.h  Direction.h  GeometryFactory.h  Node.h  Route.h  RouteInitializationReport.h  SegmentDamage.h  export.h  (+1 more)
scripts/: create_boom_tip_trace.py  create_tip_and_cable_plot.py  get_data_shape.py  get_trajectory_groups.py  preprocessing.py
src/simulation/: CMakeLists.txt
src/simulation/include/: boom.hpp  cable.hpp  collector.h  collector.hpp  constraints.hpp  global.hpp  joints.hpp  main.h  random_generator.hpp  tutorialUtils.h  utils.hpp
src/simulation/src/: Joint1DOF.cpp  Joint2DOF.cpp  boom.cpp  cable.cpp  collector.cpp  data_collect.cpp  main.cpp  random_generator.cpp
(+1061 files in other folders)
